// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Breadcrumb Basic Breadcrumbs 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6:hover {
  color: #1B214F;
}

.emotion-6:hover path {
  fill: #1B214F!important;
}

.emotion-6:visited {
  color: #6c28cc;
}

.emotion-6:visited path {
  fill: #6c28cc!important;
}

.emotion-6:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-7 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-8 path {
  fill: #686BB3!important;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
          data-testid="_breadcrumb"
        >
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 1_link"
                href="/first-level"
              >
                <span>
                  Level 1
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 2_link"
                href="/second-level"
              >
                <span>
                  Level 2
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 3_link"
                href="/third-level"
              >
                <span>
                  Level 3
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 4_link"
                href="/forth-level"
              >
                <span>
                  Level 4
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-25"
            >
              <span
                data-testid="_breadcrumb_Level 5"
              >
                Level 5
              </span>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Breadcrumb Go Back To 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6:hover {
  color: #1B214F;
}

.emotion-6:hover path {
  fill: #1B214F!important;
}

.emotion-6:visited {
  color: #6c28cc;
}

.emotion-6:visited path {
  fill: #6c28cc!important;
}

.emotion-6:focus-visible {
  border: 0.25rem solid #9347ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
          data-testid="_breadcrumb"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              Go back to
            </div>
            <a
              className="emotion-6"
              data-testid="_breadcrumb_go_back_to_Level 1_link"
              href="/first-level"
            >
              <span>
                Level 1
              </span>
            </a>
          </div>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Breadcrumb Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="breadcrumbs-consist-of-a-list-of-links-that-help-a-user-visualize-a-page's-location-within-the-hierarchical-structure-of-a-website-and-allow-navigation-up-to-any-of-its-levels."
      >
        Breadcrumbs consist of a list of links that help a user visualize a page's location within the hierarchical structure of a website and allow navigation up to any of its levels.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Breadcrumb Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9:hover {
  color: #1B214F;
}

.emotion-9:hover path {
  fill: #1B214F!important;
}

.emotion-9:visited {
  color: #6c28cc;
}

.emotion-9:visited path {
  fill: #6c28cc!important;
}

.emotion-9:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "gap": "32px",
            }
          }
        >
          <div
            className="emotion-3"
          >
            <button
              className="emotion-4"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-5"
              >
                <span>
                  Add more levels to Breadcrumb
                </span>
              </span>
            </button>
          </div>
          <ol
            aria-label="Breadcrumb"
            className="emotion-6"
            data-testid="_breadcrumb"
          >
            <li
              className="emotion-7"
            >
              <div
                className="emotion-8"
              >
                <a
                  className="emotion-9"
                  data-testid="_breadcrumb_link_Level 1_link"
                  href="/first-level"
                >
                  <span>
                    Level 1
                  </span>
                </a>
                <div
                  className="emotion-10"
                >
                  <span
                    className="emotion-11"
                  />
                </div>
              </div>
            </li>
            <li
              className="emotion-7"
            >
              <div
                className="emotion-13"
              >
                <span
                  data-testid="_breadcrumb_Level 2"
                >
                  Level 2
                </span>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Breadcrumb Third-party Routing Library 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6:hover {
  color: #1B214F;
}

.emotion-6:hover path {
  fill: #1B214F!important;
}

.emotion-6:visited {
  color: #6c28cc;
}

.emotion-6:visited path {
  fill: #6c28cc!important;
}

.emotion-6:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-7 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-8 path {
  fill: #686BB3!important;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <ol
          aria-label="Breadcrumb"
          className="emotion-3"
          data-testid="_breadcrumb"
        >
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 1_link"
                href="/first-level"
                onClick={[Function]}
              >
                <span>
                  Level 1
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 2_link"
                href="/second-level"
                onClick={[Function]}
              >
                <span>
                  Level 2
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 3_link"
                href="/third-level"
                onClick={[Function]}
              >
                <span>
                  Level 3
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <a
                className="emotion-6"
                data-testid="_breadcrumb_link_Level 4_link"
                href="/forth-level"
                onClick={[Function]}
              >
                <span>
                  Level 4
                </span>
              </a>
              <div
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                />
              </div>
            </div>
          </li>
          <li
            className="emotion-4"
          >
            <div
              className="emotion-25"
            >
              <span
                data-testid="_breadcrumb_Level 5"
              >
                Level 5
              </span>
            </div>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;
